--- a/MegaCSP/View/Base.lproj/Main.storyboard
+++ b/MegaCSP/View/Base.lproj/Main.storyboard
@@ -172,5 +172,43 @@
             </objects>
             <point key="canvasLocation" x="77.599999999999994" y="-1377.6611694152925"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Hce-9v-igR">
+            <objects>
+                <viewController id="b4T-px-Dzg" customClass="ViewController" customModule="David_Algorithm" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3NZ-Gr-nJk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HQB-yd-SBw">
+                                <rect key="frame" x="0.0" y="335" width="375" height="132"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mSe-lj-Pg4">
+                                <rect key="frame" x="0.0" y="40" width="375" height="222"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Algorithm">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="77f-Rl-x1g"/>
+                    </view>
+                    <connections>
+                        <outlet property="algorithmText" destination="mSe-lj-Pg4" id="VYK-Bu-GaB"/>
+                        <outlet property="swiftImage" destination="HQB-yd-SBw" id="aYL-Lu-Rj9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pam-1k-hhj" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2562" y="-725"/>
+        </scene>
     </scenes>
 </document>
