Added the reading data main story board from the Reading data app.

--- a/MegaCSP/View/Base.lproj/Main.storyboard
+++ b/MegaCSP/View/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="Pmg-6q-j7o" customClass="AbstractionViewController" customModule="AbstractionApp" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gzv-wC-q0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3204" y="-1377"/>
+            <point key="canvasLocation" x="169" y="-658"/>
         </scene>
         <!--SwiftViewController-->
         <scene sceneID="nkg-17-nTu">
@@ -58,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vu4-Ft-rc0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2562" y="-1378"/>
+            <point key="canvasLocation" x="-1182" y="1757"/>
         </scene>
         <!--BlockViewController-->
         <scene sceneID="VNK-FU-oqW">
@@ -86,7 +86,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dxI-e4-chh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1858" y="-1376"/>
+            <point key="canvasLocation" x="-478" y="1758"/>
         </scene>
         <!--ByteCodeViewController-->
         <scene sceneID="ncn-0n-sap">
@@ -114,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHW-rI-ANA" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1212" y="-1376"/>
+            <point key="canvasLocation" x="169" y="1759"/>
         </scene>
         <!--BinaryViewController-->
         <scene sceneID="pX3-ya-84k">
@@ -142,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmU-uQ-76S" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-564" y="-1376"/>
+            <point key="canvasLocation" x="817" y="1759"/>
         </scene>
         <!--LogicalGateViewController-->
         <scene sceneID="mgs-V5-6V3">
@@ -170,7 +170,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cwp-qh-wQ6" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="77.599999999999994" y="-1377.6611694152925"/>
+            <point key="canvasLocation" x="1458" y="1758"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Hce-9v-igR">
@@ -208,7 +208,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pam-1k-hhj" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2562" y="-725"/>
+            <point key="canvasLocation" x="-3508" y="1757"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="c5q-he-1Od">
+            <objects>
+                <viewController id="Bdr-wn-Hzl" customClass="ViewController" customModule="ReadingDataProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JZe-z3-ZNd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="SZa-tY-FKp"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="csp-WY-JN3" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2426" y="-3219"/>
         </scene>
     </scenes>
 </document>
