Added buttons to the main view controller and connected them to the other view controllers. Also fixed a couple of errors.

--- a/MegaCSP/View/Base.lproj/Main.storyboard
+++ b/MegaCSP/View/Base.lproj/Main.storyboard
@@ -16,13 +16,47 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdB-AT-FU7">
+                                <rect key="frame" x="164" y="100" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="b4T-px-Dzg" kind="show" id="xrr-GH-kiV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OV0-jz-dE1">
+                                <rect key="frame" x="164" y="160" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Pmg-6q-j7o" kind="show" id="T09-Mg-260"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKu-hG-t2z">
+                                <rect key="frame" x="164" y="220" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="p2C-iF-kM8" kind="show" id="tsa-Zb-hoH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JAG-NM-qbE">
+                                <rect key="frame" x="164" y="284" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Bdr-wn-Hzl" kind="show" id="2uC-3F-EoH"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4855" y="-658"/>
+            <point key="canvasLocation" x="-4855.1999999999998" y="-658.02098950524737"/>
         </scene>
         <!--Abstraction View Controller-->
         <scene sceneID="l1a-Sk-N79">
@@ -30,7 +64,7 @@
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="Pmg-6q-j7o" customClass="AbstractionViewController" customModule="AbstractionApp" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gzv-wC-q0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="169" y="-658"/>
+            <point key="canvasLocation" x="-3866" y="88"/>
         </scene>
         <!--SwiftViewController-->
         <scene sceneID="nkg-17-nTu">
@@ -58,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vu4-Ft-rc0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1182" y="1757"/>
+            <point key="canvasLocation" x="-3210" y="90"/>
         </scene>
         <!--BlockViewController-->
         <scene sceneID="VNK-FU-oqW">
@@ -86,7 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dxI-e4-chh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-478" y="1758"/>
+            <point key="canvasLocation" x="-2554" y="90"/>
         </scene>
         <!--ByteCodeViewController-->
         <scene sceneID="ncn-0n-sap">
@@ -114,7 +148,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHW-rI-ANA" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="169" y="1759"/>
+            <point key="canvasLocation" x="-1906" y="90"/>
         </scene>
         <!--BinaryViewController-->
         <scene sceneID="pX3-ya-84k">
@@ -142,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmU-uQ-76S" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817" y="1759"/>
+            <point key="canvasLocation" x="-1258" y="90"/>
         </scene>
         <!--LogicalGateViewController-->
         <scene sceneID="mgs-V5-6V3">
@@ -170,7 +204,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cwp-qh-wQ6" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1458" y="1758"/>
+            <point key="canvasLocation" x="-618" y="90"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Hce-9v-igR">
@@ -208,7 +242,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pam-1k-hhj" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3508" y="1757"/>
+            <point key="canvasLocation" x="-3865" y="-682"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="c5q-he-1Od">
@@ -223,7 +257,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="csp-WY-JN3" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2433" y="-2774"/>
+            <point key="canvasLocation" x="-3727" y="-2113"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Rvt-bf-oMX">
@@ -253,7 +287,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7hd-QJ-gTu" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="468" y="-2773"/>
+            <point key="canvasLocation" x="-3170" y="-1368"/>
         </scene>
         <!--Art Collection View Controller-->
         <scene sceneID="G0q-Jw-8Qi">
@@ -300,7 +334,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mZo-jj-1zN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1204" y="-2773"/>
+            <point key="canvasLocation" x="-2554" y="-1367"/>
         </scene>
     </scenes>
 </document>
